--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -15,7 +15,7 @@
           <%= p.input :races, label: "Race"%>
           <%= p.input :birthday, label: "Date de naissance",
                   as: :string,
-                  input_html: { data: { controller: "datepicker" } } %>
+                  input_html: { data: { controller: "birthdatepicker" } } %>
         </div>
         <div class="col-lg-6 col-sm-12">
           <%= p.input :medical_background, label: "Antécédents médicaux (allergies, maladies chroniques, accidents, chirurgies, etc. )", as: :text, input_html: {rows:5}%>
