--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,34 +3,18 @@
 </div>
 <div class="container mt-1">
   <div class="row justify-content-center mx-2" style="width: 100%;">
-    <%# my profil %>
-    <div class="col-sm-11 col-md-11 col-lg-5 card_pro p-4 m-2 text-center d-flex flex-column justify-content-between">
-      <div>
-        <h2> <strong> Mon Profil </strong> </h2>
-        <% if @user.photo.key?%>
-          <%= image_tag "#{ENV['SUPABASE_URL']}/storage/v1/object/public/uploaded_photos/#{@user.photo.key}", width: 100, style: "border-radius: 50%; margin: 20px; aspect-ratio: 1;", class:"object-fit-cover" %>
-        <% else %>
-          <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//profil-default.webp", alt:"photo_profil_default", width: 100, style: "border-radius: 50%; margin: 20px; aspect-ratio: 1;", class:"object-fit-cover"%>
-        <% end %>
-        <p>Nom : <strong> <%=@user.first_name%> </strong></p>
-        <p>Prénom : <strong> <%=@user.last_name%> </strong></p>
-        <p>Email : <strong> <%=@user.email%> </strong></p>
-        <p>("Vous ne pouvez pas changer votre email")</p>
-      </div>
-      <div class="text-end mt-5">
-        <%= link_to "Je souhaite supprimer mon compte",
-                              registration_path(resource_name),
-                              class: "text-danger text-center",
-                              data: { controller: "alert",
-                                      user_id: current_user.id,
-                                      action: "click->alert#deleteuser" } %>
-      </div>
-    </div>
     <%# modify the profile %>
     <div class="col-sm-11 col-md-11 col-lg-5 card_pro p-4 m-2">
       <div class="mb-4 text-center">
         <i class="fa-solid fa-paw float-end text-primary"></i>
         <h2>Modifier les informations</h2>
+      </div>
+      <div class="text-center">
+        <% if @user.photo.key?%>
+          <%= image_tag "#{ENV['SUPABASE_URL']}/storage/v1/object/public/uploaded_photos/#{@user.photo.key}", width: 100, style: "border-radius: 50%; margin: 20px; aspect-ratio: 1;", class:"object-fit-cover" %>
+        <% else %>
+          <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//profil-default.webp", alt:"photo_profil_default", width: 100, style: "border-radius: 50%; margin: 20px; aspect-ratio: 1;", class:"object-fit-cover"%>
+        <% end %>
       </div>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put}) do |f| %>
         <%= f.error_notification %>
@@ -39,25 +23,25 @@
             <%= f.input :first_name, label: "Prénom" %>
             <%= f.input :last_name, label: "Nom" %>
           </div>
+          <%= f.input :email, label: "Email" %>
           <%= f.input :photo, as: :file, label: "Photo" %>
           <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
             <p>Actuellement en attente pour: <%= resource.unconfirmed_email %></p>
           <% end %>
+
           <%= f.input :password,
-                        label: "Mot de passe",
-                        hint: "Ne mettez rien si vous ne voulez pas changer",
+                        label: "Nouveau de mot de passe",
                         required: false,
                         input_html: { autocomplete: "new-password" } %>
           <%= f.input :password_confirmation,
-                        label: "Confirmation du mot de passe",
+                        label: "Confirmation du nouveau mot de passe",
                         required: false,
                         input_html: { autocomplete: "new-password" } %>
-          <%= f.input :current_password,
-                        label: "Mot de passe actuel",
-                        hint: "Saisissez votre mot de passe actuel pour valider les changements",
-                        required: true,
-                        input_html: { autocomplete: "current-password" } %>
         </div>
+            <%= f.input :current_password,
+                  as: :password,
+                  label: "Mot de passe actuel",
+                  input_html: { autocomplete: "current-password"}%>
         <div class="form-actions text-center mt-4">
           <%= f.button :submit, "Valider les changements",  class: "btn btn-primary" %>
         </div>
