--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -14,12 +14,12 @@
       <div class="row">
         <div class="col-lg-6 col-sm-12">
           <%= p.input :name, label: "Nom de l'animal" %>
-          <%= p.input :species, label: "Espèce" %>
+          <%= p.input :species, label: "Espèce", collection: ["Chien", "Chat", "Lapin", "Oiseau", "Rongeur", "Reptile", "Poisson", "Autre"] %>
           <%= p.input :sex, label: "Sexe", collection: ["Mâle", "Femelle"]%>
           <%= p.input :races, label: "Race"%>
           <%= p.input :birthday, label: "Date de naissance",
                 as: :string,
-                input_html: { data: { controller: "datepicker" } } %>
+                input_html: { data: { controller: "birthdatepicker" } } %>
         </div>
         <div class="col-lg-6 col-sm-12">
           <%= p.fields_for :weight_histories do |w|%>
