--- a/app/views/professionals/_appointment_details.html.erb
+++ b/app/views/professionals/_appointment_details.html.erb
@@ -28,7 +28,7 @@
         <% if Pet.find(@appointment.pet_id).photo.present? %>
           <%= image_tag(Pet.find(@appointment.pet_id).photo_url,  style:"width: 100px; aspect-ratio:1; border-radius: 20px; object-fit: cover;") %>
         <% else %>
-          <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(1).jpg", alt:"photo_pet_default", style:"width: 100px; aspect-ratio:1; border-radius: 20px; object-fit: cover;")%>
+          <%= image_tag("https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//cat.svg", alt:"photo_pet_default", style:"width: 100px; aspect-ratio:1; border-radius: 20px; object-fit: cover;")%>
         <% end %>
         <% if @professional.specialty=="Vétérinaire"%>
           <a href="<%=professional_pet_show_for_pro_path(professional_id: @professional.id, id: @appointment.pet_id)%>" target="_blank">Voir le carnet de santé</a>
