--- a/app/views/professionals/pro_show.html.erb
+++ b/app/views/professionals/pro_show.html.erb
@@ -31,7 +31,7 @@
         <div class="d-flex flex-row justify-content-between">
           <p class="text-start mx-4">Les horaires du rendez-vous : </p>
           <a href="<%=professional_edit_availibilities_path(@professional)%>" class="btn btn-secondary me-4">
-            gérer mes créneaux
+            Gérer mes créneaux
           </a>
         </div>
         <%= turbo_frame_tag :all_slot do %>
