--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,8 +10,7 @@
           <% else %>
             <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//profil-default.webp", alt:"photo_profil_default", width: 100, style: "border-radius: 50%; margin: 20px; aspect-ratio: 1;", class:"object-fit-cover"%>
           <% end %>
-          <p> <strong> Nom : </strong><%=@user.first_name%> </p>
-          <p><strong>  Prénom : </strong> <%=@user.last_name%> </p>
+          <p> <%=@user.first_name%> <%=@user.last_name%></p>
           <p><strong> Email : </strong> <%=@user.email%> </p>
           <div>
             <%= link_to "Modifier mon profil", edit_user_registration_path(current_user), class: "btn btn-primary rounded-3 my-4" %>
@@ -61,8 +60,8 @@
               <div class="card_pro p-4 m-1 text-start" style="background-color: white;">
                 <div class="text-end">
                   <div >
-                    <p><%= a.start_time.strftime("%d/%m/%Y")%></p>
-                    <p><%= a.start_time.strftime("%H:%M")%></p>
+                    <p>Le <%= a.start_time.strftime("%d/%m/%Y")%></p>
+                    <p>à <%= a.start_time.strftime("%H:%M")%></p>
                   </div>
                 </div>
                 <p>Professionnel : <strong><%= a.professional.name %></strong></p>
