add video presentation to about us

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -73,7 +73,10 @@
       <h3 class="about-script">Comment prendre Boop en main ? </h3>
     </div>
     <div class="about-invite-img">
-      <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//adoption.webp", alt: "Cartes", class: "about-cards" %>
+      <video class="about-cards" controls poster="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//presentation-boop-thumbnail.jpg">
+        <source src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//presentation-boop.webm" type="video/webm">
+        Votre navigateur ne supporte pas la vidéo.
+      </video>
     </div>
   </section>
 </div>
