--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -103,7 +103,7 @@
               </div>
             </div>
             <!-- Bouton de soumission -->
-            <%= a.button :submit, "Confirmer le rendez-vous", class: "btn_custom my-4"%>
+            <%= a.button :submit, "Confirmer le rendez-vous", class: "btn_custom my-4", aria_label:"Confirmer"%>
           </div>
         </div>
       </div>
