--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -17,7 +17,7 @@
             </div>
 
             <div class="form-actions">
-              <%= f.button :submit, "Renvoyer les instructions de confirmation", class: "btn btn-primary" %>
+              <%= f.button :submit, "Renvoyer les instructions de confirmation", class: "btn btn-primary", aria_label:"Confirmer" %>
             </div>
           <% end %>
 
