--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>Boop - Accompagner avec soin, Adopter avec amour </title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Boop est une plateforme dédiée à l'adoption responsable d'animaux de compagnie, mettant en relation les refuges et les adoptants potentiels. Boop facilite également la mise en relation entre les propriétaires d'animaux et les professionels animaliers pour des services tels que les soins, la garde, le pet-sitting, et les promenades. Notre mission est de promouvoir l'adoption responsable et de garantir le bien-être des animaux.">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload"%>
