--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -12,13 +12,13 @@
         </p>
 
         <div class="cta-buttons">
-          <a href="<%=professionals_path%>" class="btn btn-primary">Prendre un rendez-vous</a>
-          <a href="<%=pricings_path%>" class="btn btn-outline-primary text-black">Proposer un service</a>
+          <a href="<%=professionals_path%>" class="btn btn-primary" aria-label="Prendre un rendez-vous">Prendre un rendez-vous</a>
+          <a href="<%=pricings_path%>" class="btn btn-outline-primary text-black" aria-label="Proposer un service">Proposer un service</a>
         </div>
       </div>
 
       <div class="hero-image">
-        <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//banner.webp"%>
+        <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//banner.webp", alt: "Chien"%>
       </div>
     </div>
   </div>
