--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -65,7 +65,7 @@ Boop Custom est votre solution, à votre façon. Contactez-nous pour une étude 
         Prix : <strong class="text-warning"><span><%= humanized_money_with_symbol @order.amount %></span></strong> /mois
       </h3>
 
-      <button id="pay" class="btn_payment">
+      <button id="pay" class="btn_payment" aria-label="Payer">
         <h5>Payer</h5>
       </button>
       <%# Commented for the lecture, remove comments. %>
