--- a/app/views/pet_alerts/new.html.erb
+++ b/app/views/pet_alerts/new.html.erb
@@ -25,7 +25,7 @@
         <%= p.file_field :photo, label: "Photo"%>
       </div>
       <div class="text-center my-4">
-        <%= p.button :submit, "Créer l'annonce", class: "btn btn-primary rounded rounded-4"%>
+        <%= p.button :submit, "Créer l'annonce", class: "btn btn-primary rounded rounded-4", aria_label:"Créer l'annonce"%>
       </div>
     <% end %>
   </div>
