--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -14,7 +14,7 @@
             </div>
             <!-- Image qui prend le reste de la place -->
             <div class="flex-grow-1" style="overflow: hidden;">
-              <%= image_tag pet.photo, style: "width: 100%; height: 100%; object-fit: cover;" %>
+              <%= image_tag pet.photo, style: "width: 100%; height: 100%; object-fit: cover;", alt:"pet" %>
             </div>
           </div>
         </div>
