--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -10,43 +10,43 @@
       </h1>
       <div class="about-hero-content">
         <div class="about-hero-img">
-          <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//mathilde&edwin.webp", alt: "Mathilde & Edwin", class: "about-portrait" %>
+          <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//mathilde-edwin.webp", alt: "Mathilde & Edwin", class: "about-portrait" %>
         </div>
         <div class="about-hero-text">
           <h2 class="about-script">Mathilde & Edwin</h2>
           <p>
-            Nous sommes Mathilde et Edwin, deux grands amoureux des animaux, animés par une profonde empathie et un attachement sincère à toutes les petites vies qui nous entourent. Chaque battement de cœur félin, chaque remue de queue canin et chaque chant d’oiseau nous rappellent à quel point les animaux méritent respect et tendresse.
+            Boop est né de notre envie de faciliter l’adoption responsable, mais aussi d’accompagner les propriétaires de compagnons à quatre pattes au quotidien. Grâce à une plateforme simple et intuitive, nous permettons à chacun de trouver et de prendre rendez-vous facilement avec des professionnels de confiance : vétérinaires, éducateurs, pet-sitters…
           </p>
           <p>
-            Notre objectif est clair : apporter aide, soins et attention à tous les compagnons qui en ont besoin. Guidés par nos valeurs d’empathie, de générosité et de dévouement, nous ferons tout notre possible pour que chaque animal reçoive l’amour et le soutien nécessaires afin de s’épanouir pleinement.
+            Portés par des valeurs de bienveillance, d’engagement et de respect du vivant, nous avons imaginé un outil utile, pensé pour le bien-être animal, du premier contact avec son humain jusqu’à son dernier souffle.
           </p>
         </div>
       </div>
-    </div>
-  </section>
-  <section class="about-hero">
-    <div class="about-hero-content">
-      <div class="about-hero-text">
-        <h2 class="about-script">Lika & Marc</h2>
-        <p>
-          Nous sommes Lika et Marc, deux passionnés engagés au service du bien-être animal. Animés par la même vision de compassion et de respect pour tous les compagnons à poils, plumes ou écailles, nous avons rejoint l’aventure Boop pour porter haut les couleurs de l’entraide et de la bienveillance envers les animaux.
-        </p>
-        <p>
-          Notre mission est simple : accompagner chaque refuge, chaque association et chaque famille dans la quête d’un foyer aimant, en plaçant l’empathie et la solidarité au cœur de notre action. Guidés par nos valeurs de confiance, de transparence et de collaboration, nous mettons toute notre énergie à rapprocher les êtres humains et les animaux pour créer des liens durables et heureux.
-        </p>
-      </div>
-      <div class="about-hero-img">
-        <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//lika-marc.webp", alt: "Chanlika Servais @ Marc Servais", class:"about-portrait"%>
+      <div class="about-hero-content">
+        <div class="about-hero-text">
+          <h2 class="about-script">Lika & Marc</h2>
+          <p>
+            Nous sommes Lika et Marc, deux passionnés engagés au service du bien-être animal. Animés par la même vision de compassion et de respect pour tous les compagnons à poils, plumes ou écailles, nous avons rejoint l’aventure Boop pour porter haut les couleurs de l’entraide et de la bienveillance envers les animaux.
+          </p>
+          <p>
+            Notre mission est simple : accompagner chaque refuge, chaque association et chaque famille dans la quête d’un foyer aimant, en plaçant l’empathie et la solidarité au cœur de notre action. Guidés par nos valeurs de confiance, de transparence et de collaboration, nous mettons toute notre énergie à rapprocher les êtres humains et les animaux pour créer des liens durables et heureux.
+          </p>
+        </div>
+        <div class="about-hero-img">
+          <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//lika-marc.webp", alt: "Chanlika Servais @ Marc Servais", class:"about-portrait"%>
+        </div>
       </div>
     </div>
   </section>
   <!-- Parcours -->
   <section class="about-section about-section-brown">
     <h3 class="mx-3">COMMENT NOUS SOMMES ARRIVÉS LÀ ?</h3>
-<p>
-  Au début, nous nous sommes concentrés sur l’aide aux animaux en refuge, en oubliant parfois les besoins les plus simples de chaque compagnon. Nous avons d’abord créé une application mobile pour faciliter le travail des refuges, mais très vite nous avons réalisé que tous les animaux, partout, méritent des soins et de l’attention au quotidien. C’est pourquoi nous avons donné vie à Boop : pour simplifier la prise de rendez-vous et rendre les carnets de santé accessibles à tous, afin que chaque animal reçoive rapidement l’accompagnement et l’amour dont il a besoin.
-</p>
-
+    <p>
+      Au départ, notre mission était simple : venir en aide aux animaux en refuge. Mais en chemin, nous avons compris quelque chose d’essentiel. Ce ne sont pas seulement les animaux abandonnés qui ont besoin de soutien, chaque chien, chaque chat, chaque petit compagnon mérite une attention de qualité au quotidien.
+      Nous avions lancé une première version de Boop pour faciliter le travail des refuges, mais très vite, une évidence s’est imposée : tous les propriétaires d’animaux rencontrent un jour des difficultés pour organiser les soins, suivre les vaccins ou trouver un professionnel de confiance.
+      C’est ainsi qu’est né Boop, une plateforme pensée pour simplifier la prise de rendez-vous vétérinaire, rendre le carnet de santé digital accessible à tous et connecter les propriétaires avec des professionnels animaliers de qualité.
+      Notre objectif ? Que chaque animal reçoive l’amour, les soins et le suivi dont il a besoin, sans stress ni complications. Parce qu’un animal heureux, c’est aussi un humain serein 🐾
+    </p>
     <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//Boop%20-%20LOGO%20FINAL%20BLANC.png", alt: "Boop logo", class: "about-logo" %>
   </section>
   <!-- Unicité -->
@@ -70,10 +70,10 @@
   <!-- Démo -->
   <section class="about-section about-invite">
     <div class="about-invite-text">
-      <h3 class="about-script">Comment prendre Boop en main ? </h3>
+      <h3 class="about-script">Que fait Boop ? </h3>
     </div>
     <div class="about-invite-img">
-      <video class="about-cards" controls poster="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//presentation-boop-thumbnail.jpg">
+      <video class="about-video" controls poster="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//presentation-boop-thumbnail.jpg">
         <source src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//presentation-boop.webm" type="video/webm">
         Votre navigateur ne supporte pas la vidéo.
       </video>
