--- a/app/assets/stylesheets/components/_about.scss
+++ b/app/assets/stylesheets/components/_about.scss
@@ -29,7 +29,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 80%;
     gap: 20px;
     flex-direction: row;
 
@@ -38,6 +38,7 @@
       flex-direction: column;
       gap: 10px;
       align-items: stretch;
+      width: 100%;
 
     }
 
@@ -64,9 +65,12 @@
     .about-hero-text {
       flex: 1;
       padding-left: 40px;
+      padding-right: 40px;
+      text-align: justify;
 
       @media (max-width: 768px) {
         padding-left: 0;
+        padding-right: 0;
       }
 
       .about-script {
@@ -99,7 +103,7 @@
     }
 
     p {
-      text-align: center;
+      text-align: justify;
       width: 70%;
       margin-top: 2rem;
       margin-left: auto;
@@ -124,12 +128,16 @@
     padding: 40px;
 
     .about-invite-img {
-      margin: 20px;
+      margin-top: 24px;
 
-      .about-cards {
+      .about-video {
         width: 70%;
         border-radius: 16px;
         box-shadow: 0 4px 24px rgba(0, 0, 0, 0.07);
+
+        @media (max-width: 768px) {
+          width: 100%;
+        }
       }
     }
 
