--- a/app/views/pricings/_pricing_card.html.erb
+++ b/app/views/pricings/_pricing_card.html.erb
@@ -38,7 +38,7 @@
         <h5>Payer</h5>
       </button>
     <% else %>
-      <%= link_to "Démarrer l'essai", new_user_session_path, class: "btn btn-custom" %>
+      <%= link_to "Démarrer l'essai", new_user_session_path, class: "btn btn_custom w-100" %>
     <% end %>
   </div>
 </div>
